style: fixed transparency on tablets & mobile

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -131,6 +131,7 @@ body.about {
         height: auto;
 
         @media only screen and (max-width: $tablet) {
+            background-color: rgba($white, 0.95);
             position: sticky;
             width: 100%;
             top: 0;
@@ -222,6 +223,7 @@ body.about {
         color: $black;
 
         @media only screen and (max-width: $tablet) {
+            background-color: rgba(#A2A2D4, 0.9);
             width: 90%;
             min-width: 90%;
         }
